--- a/new-api/package.json
+++ b/new-api/package.json
@@ -25,10 +25,12 @@
   "dependencies": {
     "@prisma/client": "^6.15.0",
     "@types/bcryptjs": "^2.4.6",
+    "axios": "^1.11.0",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "helmet": "^7.1.0",
+    "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "prisma": "^6.15.0",
     "ts-node": "^10.9.2",
