Enterprise v6.0.0 - Deploy Ready + Module Fixes
 CORREÇÕES IMPLEMENTADAS:
- Fixed PowerShell compatibility in package.json scripts
- Corrected module import paths in sistema-integrado.js
- Fixed config import paths in servidor-dashboard.js
- All npm commands now working (start, start:enterprise, start:production, start:integrated)

 NOVOS RECURSOS:
- Deploy scripts for multiple platforms (Docker, Hostinger, Railway)
- Enhanced database schema and connection pooling
- 2FA authentication middleware
- Prometheus monitoring integration
- OpenAI rate limiting
- Currency converter service
- Complete deploy documentation

 LIMPEZA DE CÓDIGO:
- Removed outdated system scripts
- Cleaned up backup files
- Streamlined file structure

 SISTEMA 100% FUNCIONAL - Pronto para deploy em produção!

--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "scale:up": "docker service scale coinbitclub-enterprise_app=16",
     "scale:down": "docker service scale coinbitclub-enterprise_app=4",
     "health:check": "curl -f http://localhost:3333/health",
-    "start:production": "NODE_ENV=production node enterprise-orchestrator.js",
+    "start:production": "powershell -Command \"$env:NODE_ENV='production'; node enterprise-orchestrator.js\"",
     "backup:create": "powershell -ExecutionPolicy Bypass -File scripts/backup/backup-enterprise.ps1",
     "metrics": "curl http://localhost:3333/metrics"
   },
