--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
   "dependencies": {
     "aws-sdk": "^2.1692.0",
     "axios": "^1.11.0",
+    "bcrypt": "^6.0.0",
     "bcryptjs": "^2.4.3",
     "bybit-api": "^4.2.2",
     "ccxt": "^4.1.0",
@@ -75,6 +76,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.21.2",
     "express-rate-limit": "^7.5.1",
+    "express-validator": "^7.2.1",
     "helmet": "^7.2.0",
     "ioredis": "^5.7.0",
     "jsonwebtoken": "^9.0.2",
@@ -86,7 +88,9 @@
     "openai": "^4.104.0",
     "pg": "^8.16.3",
     "prom-client": "^15.1.3",
+    "qrcode": "^1.5.4",
     "redis": "^5.8.2",
+    "speakeasy": "^2.0.0",
     "stripe": "^14.5.0",
     "twilio": "^4.19.0",
     "uuid": "^11.1.0",
