feat: construct database instruction

--- a/package.json
+++ b/package.json
@@ -5,63 +5,7 @@
   "main": "src/enterprise-unified-system.js",
   "scripts": {
     "start": "node src/enterprise-unified-system.js",
-    "market": "node sistema-leitura-mercado-enterprise.js",
-    "dashboard": "node servidor-dashboard.js",
-    "test": "node teste-integracao-real.js",
-    "test-system": "node teste-completo-sistema.js",
-    "verify": "node verificar-apis-reais.js",
-    "audit": "node auditoria-dados-reais.js",
-    "app": "node app.js",
-    "trade": "node sistema-trade-completo.js",
-    "demo": "node exemplos-trades.js",
-    "garantido": "node coinbitclub-garantido.js",
-    "dev": "node sistema-integrado.js",
-    "deploy": "node auto-deploy.js",
-    "ip-fix": "node start.js",
-    "start:enterprise-unified": "node enterprise-orchestrator.js",
-    "consolidate:enterprise": "node enterprise-consolidation-executor.js",
-    "start:enterprise": "node src/enterprise-unified-system.js",
-    "start:integrated": "node src/services/sistema-integrado.js",
-    "start:phase3": "node implementations/phase3/scalability-phase3-enterprise.js",
-    "start:orchestrated": "node implementations/phase3/scalability-phase3-enterprise.js",
-    "test:unit": "jest tests/unit",
-    "test:integration": "jest tests/integration",
-    "test:load": "node tests/load/load-test-1000-users.js",
-    "test:performance": "node tests/performance/performance-test.js",
-    "test:stress": "node tests/stress/stress-test.js",
-    "deploy:vps-lithuania": "powershell -ExecutionPolicy Bypass -File scripts/deployment/deploy-production-lithuania-fixed.ps1",
-    "deploy:vps-local": "powershell -ExecutionPolicy Bypass -File scripts/deployment/deploy-production-lithuania-fixed.ps1 -LocalDeploy",
-    "deploy:production": "docker stack deploy -c docker-compose.production.yml coinbitclub-enterprise",
-    "security:audit": "node scripts/maintenance/security-cleanup.js",
-    "backup:project": "node scripts/maintenance/backup-project.js",
-    "monitoring:start": "docker-compose -f docker-compose.monitoring.yml up -d",
-    "test:local": "powershell -ExecutionPolicy Bypass -File scripts/test-local.ps1",
-    "orchestration:start": "powershell -ExecutionPolicy Bypass -File scripts/orchestration/manage-orchestration.ps1 -Action start -Local",
-    "orchestration:start-remote": "powershell -ExecutionPolicy Bypass -File scripts/orchestration/manage-orchestration.ps1 -Action start",
-    "orchestration:stop": "powershell -ExecutionPolicy Bypass -File scripts/orchestration/manage-orchestration.ps1 -Action stop -Local",
-    "orchestration:status": "powershell -ExecutionPolicy Bypass -File scripts/orchestration/manage-orchestration.ps1 -Action status -Local",
-    "orchestration:health": "powershell -ExecutionPolicy Bypass -File scripts/orchestration/manage-orchestration.ps1 -Action health -Local",
-    "orchestration:logs": "powershell -ExecutionPolicy Bypass -File scripts/orchestration/manage-orchestration.ps1 -Action logs -Local",
-    "setup:vps": "powershell -ExecutionPolicy Bypass -File scripts/deployment/setup-vps-lithuania.ps1",
-    "setup:vps-local": "powershell -ExecutionPolicy Bypass -File scripts/deployment/setup-vps-lithuania.ps1 -LocalSetup",
-    "build:docker": "docker build -t coinbitclub/trading-enterprise:latest .",
-    "logs:view": "docker-compose -f docker-compose.production.yml logs -f",
-    "scale:up": "docker service scale coinbitclub-enterprise_app=16",
-    "scale:down": "docker service scale coinbitclub-enterprise_app=4",
-    "health:check": "curl -f http://localhost:3333/health",
-    "start:production": "powershell -Command \"$env:NODE_ENV='production'; node enterprise-orchestrator.js\"",
-    "backup:create": "powershell -ExecutionPolicy Bypass -File scripts/backup/backup-enterprise.ps1",
-    "metrics": "curl http://localhost:3333/metrics",
-    "db:setup": "node scripts/database-setup.js",
-    "db:migrate": "node migrate-to-enterprise.js",
-    "test:db": "node scripts/test-database-connection.js",
-    "db:install": "psql -U coinbitclub_user -d coinbitclub_enterprise -f scripts/database/enterprise-complete-database-setup.sql",
-    "db:verify": "psql -U coinbitclub_user -d coinbitclub_enterprise -c \"SELECT COUNT(*) as total_tables FROM information_schema.tables WHERE table_schema = 'public';\"",
-    "db:admin": "psql -U coinbitclub_user -d coinbitclub_enterprise -c \"SELECT username, email FROM users WHERE username = 'admin';\"",
-    "db:backup": "pg_dump -U coinbitclub_user -d coinbitclub_enterprise > backup_$(date +%Y%m%d_%H%M%S).sql",
-    "setup:database:bash": "bash setup-database.sh",
-    "setup:database:powershell": "powershell -ExecutionPolicy Bypass -File setup-database.ps1",
-    "setup:database": "powershell -ExecutionPolicy Bypass -File setup-database.ps1"
+    "setup:database": "node setup-complete-database.js"
   },
   "dependencies": {
     "aws-sdk": "^2.1692.0",
