feat: add performance tables, update performance functions

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "src/enterprise-unified-system.js",
   "scripts": {
     "start": "node src/enterprise-unified-system.js",
+    "orchestrator": "node enterprise-orchestrator.js",
     "setup:database": "node setup-complete-database.js"
   },
   "dependencies": {
