--- a/config/environments/.env.example
+++ b/config/environments/.env.example
@@ -46,9 +46,23 @@ JWT_SECRET=sua_jwt_secret_key_super_segura_aqui
 ENCRYPTION_KEY=sua_chave_de_criptografia_aqui
 
 # =================
+# OPENAI (for AI Trading Decisions)
+# =================
+OPENAI_API_KEY=sk-your-openai-api-key-here
+
+# =================
+# TRADING CONFIGURATION
+# =================
+ENABLE_REAL_TRADING=false
+MAX_LEVERAGE=10
+MAX_POSITION_SIZE=100
+MAX_POSITIONS_PER_USER=2
+MAX_POSITION_SIZE_PERCENT=50
+
+# =================
 # SERVIDOR
 # =================
-PORT=3000
+PORT=3333
 NODE_ENV=development
 
 # =================
