--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "qrcode": "^1.5.4",
     "redis": "^5.8.2",
     "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1",
     "speakeasy": "^2.0.0",
     "stripe": "^14.5.0",
     "twilio": "^4.19.0",
