--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "axios": "^1.11.0",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^2.4.3",
+    "binance-api-node": "^0.12.9",
+    "body-parser": "^2.2.0",
     "bybit-api": "^4.2.2",
     "ccxt": "^4.1.0",
     "compression": "^1.7.4",
